# SpamOverflow

./: .gitignore  .terraform.lock.hcl  02b4dedb-9076-43ac-95e8-5d9d8c30b8e3_output.json  5771d496-b0d5-4fcf-ba45-43903b27747d_output.json  Dockerfile  README.md  api.txt  deploy.sh  docker-compose.yml  e50d0f66-11f3-47ab-a0dd-7b93e30836f3_input.json  e50d0f66-11f3-47ab-a0dd-7b93e30836f3_output.json  endpoints.http  local.sh  main.tf  pyproject.toml  requirements.txt
instance/: db.sqlite
spamoverflow/: __init__.py
spamoverflow/models/: __init__.py  email.py  todo.py
spamoverflow/tasks/: ical.py  scan.py  spamscan.py
spamoverflow/views/: routes.py
