[tool.poetry]
name = "\"spamoverflow\""
version = "1.0.0"
description = ""
authors = ["Manav Trivedi"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
pendulum = "^3.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
